--- a/index.css
+++ b/index.css
@@ -76,3 +76,62 @@
     .card:hover .buttons {
         opacity: 1;
     }
+
+
+    /* ----------------------------------- NAVBAR ----------------------------------- */
+
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+header{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #00518C;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10%;
+}
+
+li,a,button{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    color: #f5f5f5;
+    text-decoration: none;
+    list-style-type: none; 
+}
+
+a{
+    padding: 0px 20px;
+}
+
+.logo{
+    cursor: pointer;
+    aspect-ratio: 1/1;
+    height: 80px;
+}
+
+.nav_links{
+    display: flex;
+    padding:0px 20px;
+}
+.nav_links li a {
+    transition: all 0.3 ease 0s;
+}
+.nav_links li a:hover{
+    color: #00518C; 
+}
+
+button{
+    padding: 9px 25px;
+    background-color: #00318c;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+button:hover{
+    background-color: #f5f5f53f;
+    color: #00518C;
+}
