--- a/index.css
+++ b/index.css
@@ -1,87 +1,5 @@
-
-    h1 {
-        padding: 15px;
-        background-color: #fbd17d;
-        display: flex;
-        justify-content: center;
-    }
-
-    h4 {
-        color: white;
-        background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    .main {
-        padding: 20px;
-    }
-
-    .main img {
-        width: 100%;
-        height: 500px;
-        object-fit: cover;
-    }
-
-    .card-img-top {
-        height: 400px;
-        object-fit: cover;
-    }
-
-    .center-screen {
-        height: 10vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .overlay {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 10%;
-        background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    .card {
-        position: relative;
-        overflow: hidden;
-    }
-
-    .card::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0);
-        z-index: 1;
-        transition: background-color 0.3s ease;
-    }
-
-    .card:hover::before {
-        background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    .card .buttons {
-        position: absolute;
-        bottom: 50%;
-        left: 50%;
-        transform: translate(-50%, 50%);
-        opacity: 0;
-        transition: opacity 0.3s ease;
-        z-index: 2;
-    }
-
-    .card:hover .buttons {
-        opacity: 1;
-    }
-
-
-    /* ----------------------------------- NAVBAR ----------------------------------- */
-
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
-
+/* ----------------------------------- NAVBAR ----------------------------------- */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 header{
     box-sizing: border-box;
     margin: 0;
@@ -93,7 +11,7 @@ header{
     padding: 10px 10%;
 }
 
-li,a,button{
+.nav_links li,a,button{
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 15px;
@@ -102,7 +20,7 @@ li,a,button{
     list-style-type: none; 
 }
 
-a{
+.nav_links a{
     padding: 0px 20px;
 }
 
@@ -120,7 +38,7 @@ a{
     transition: all 0.3 ease 0s;
 }
 .nav_links li a:hover{
-    color: #00518C; 
+    border-bottom: 5px solid   #112432;
 }
 
 button{
