--- a/index.css
+++ b/index.css
@@ -1,3 +1,81 @@
+:root {
+    --one: #153143;
+    --two: #50833b;
+    --white: #f5f5f5;
+    --black: #1d1d1d ;
+
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+/* ----------------------------------- INDEX ----------------------------------- */
+
+
+.index-card-container{
+    display: flex;
+    justify-content: center;
+    margin: 0px 100px;
+}
+
+.index-card-2{
+    display: flex;
+    height: 400px;
+    margin: 50px;
+}
+
+.index-card-image{
+    height: 100%;
+}
+
+.index-card-image img{
+    height: 100%;
+}
+
+.index-card-description{
+    color: #f5f5f5;
+    background-color: var(--two);
+    width: 400px;
+    padding: 50px;
+    margin-left: 30px;
+}
+
+.index-card-description a{
+    height: 30px;
+    width: 300px;
+    padding: 3px;
+    background-color: #f5f5f5;
+    color: #112432;
+    margin: 20;
+    transition: 0.2s;
+}
+
+.index-card-description button{
+    height: 30px;
+    width: 300px;
+    padding: 3px;
+    background-color: var(--one);
+    color: var(--white);
+    margin: 20;
+    transition: 0.2s;
+    border: none;
+}
+
+.index-card-description a:hover{
+    background-color: var(--one);
+    color: var(--white);
+}
+
+.index-card-description button:hover{
+    background-color: var(--one);
+    color: var(--white);
+}
+
+
+
 /* ----------------------------------- NAVBAR ----------------------------------- */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 header{
