--- a/index.css
+++ b/index.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
 :root {
-    --one: #153143;
-    --two: #50833b;
-    --white: #f5f5f5;
+    --one: #233142;
+    --two: #455d7a;
+    --three: #f95959;
     --black: #1d1d1d ;
+    --white: #e3e3e3;
 
 }
 
@@ -10,6 +13,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
+
+body{
+    background-color: var(--w);
 }
 
 /* ----------------------------------- INDEX ----------------------------------- */
@@ -65,24 +73,20 @@
 }
 
 .index-card-description a:hover{
-    background-color: var(--one);
+    background-color: var(--three);
     color: var(--white);
 }
 
 .index-card-description button:hover{
-    background-color: var(--one);
-    color: var(--white);
+    color: var(--three);
 }
 
-
-
 /* ----------------------------------- NAVBAR ----------------------------------- */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 header{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #00518C;
+    background-color: var(--one);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -90,10 +94,9 @@ header{
 }
 
 .nav_links li,a,button{
-    font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 15px;
-    color: #f5f5f5;
+    color: var(--white);
     text-decoration: none;
     list-style-type: none; 
 }
@@ -116,18 +119,18 @@ header{
     transition: all 0.3 ease 0s;
 }
 .nav_links li a:hover{
-    border-bottom: 5px solid   #112432;
+    color: var(--three);
 }
 
-button{
+header button{
     padding: 9px 25px;
-    background-color: #00318c;
+    background-color: var(--two);
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
 }
-button:hover{
-    background-color: #f5f5f53f;
-    color: #00518C;
+
+header button:hover{
+    background-color: var(--three);
 }
