--- a/login/login.css
+++ b/login/login.css
@@ -1,3 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+:root {
+    --one: #233142;
+    --two: #455d7a;
+    --three: #f95959;
+    --black: #1d1d1d ;
+    --white: #e3e3e3;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
+
+body{
+    background-color: var(--white);
+}
+
+a:hover{
+    color:  var(--three);
+}
+
+button:hover {
+    background-color: var(--three);
+}
+
 .mySection {
     display: flex;
     justify-content: center;
@@ -6,9 +35,8 @@
 }
 
 .leftLogin {
-    background-color: rgb(0, 81, 140, 0.4);
-    /* background-color: #F5CBCD; */
-    /* background-color:  rgba(41,95,78, .25); */
+    background-color: var(--two);
+    color: var(--white);
     height: 500px; 
     width:600px;
     padding-left: 5%;
@@ -18,6 +46,8 @@
 
 a { 
     color: inherit; 
+    font-weight: bolder;
+    text-decoration: none;
 } 
 
 .rightLogin {
