--- a/login/register.css
+++ b/login/register.css
@@ -1,3 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+:root {
+    --one: #233142;
+    --two: #455d7a;
+    --three: #f95959;
+    --black: #1d1d1d ;
+    --white: #e3e3e3;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
+
+body{
+    background-color: var(--white);
+}
+
 .rightRegister {
     background-color:rgb(245, 203, 205, 0.15);
     height: 700px; 
