--- a/crud_activity/crud_activity.css
+++ b/crud_activity/crud_activity.css
@@ -15,9 +15,19 @@
     font-family: "Montserrat", sans-serif;
 }
 
-
 body{
     background-color: var(--white);
+}
+
+.myBtn {
+    width: 100%;
+    background-color: var(--one)!important;
+    color: #F5F5F5!important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)!important;
+}
+
+.myBtn:hover {
+    background-color: var(--three)!important;
 }
 
 
@@ -31,20 +41,46 @@ body{
     align-items: center;
     padding: 20px 20px;
     border-radius: 5%;
-    height: 850px;
+    height: 800px;
     width: 600px;
     margin-bottom: 100px;
 }
 
-.myBtn {
-    width: 100%;
-    background-color: var(--one);
-    color: #F5F5F5;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+/* styling for the create */
+
+.createActivity {
+    background-color: rgba(35,49,66, 0.7);
+    color: var(--white);
+    align-items: center;
+    padding: 20px 20px;
+    border-radius: 5%;
+    height: 800px!important;
+    width: 600px!important;
+    margin-bottom: 100px;
 }
 
-.myBtn:hover {
-    background-color: var(--three);
+
+
+/* styling for the show /details activity */
+
+.showRight {
+    position: relative;
+    background-color: rgba(35,49,66, 0.7);
+    color: var(--white);
+    height: 700px;
+    padding: 60px;
 }
 
+.showLeft {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 700px;
+}
+
+span {
+    display: inline-block;
+    width: 160px;
+}
 
