--- a/crud_user/crud_user.css
+++ b/crud_user/crud_user.css
@@ -37,6 +37,8 @@ span {
     color: var(--white);
 }
 
+/* show profile */
+
 .showRight {
     position: relative;
     background-color: rgba(35,49,66, 0.7);
