--- a/index.css
+++ b/index.css
@@ -35,11 +35,12 @@ body{
 }
 
 .index-card-image{
-    height: 100%;
+    /* max-height: 100%; */
+    width: 600px;
 }
 
 .index-card-image img{
-    height: 100%;
+    max-height: 100%;
 }
 
 .index-card-description{
