--- a/index.css
+++ b/index.css
@@ -143,16 +143,20 @@ header button:hover{
 /* ----------------------------------- ROUTINE ----------------------------------- */
 
 .total-container{
-    max-width: 800px;
+    max-width: 1030px;
     display: flex;
     justify-content: space-around;
-    margin: 50px 100px;
+    margin-left: auto;
+    margin-right: auto;
     padding:50px;
     color: var(--white);
     background-color: var(--one);
+    margin-bottom: 100px;
 }
 
 .total-info{
+    text-align: center;
+    padding-top: 60px;
 }
 
 .total-timer{
@@ -160,6 +164,7 @@ header button:hover{
     padding: 50px;
     background-color: var(--two);
     border-radius: 50px;
+    text-align: center;
 }
 
 #output{ 
@@ -183,3 +188,4 @@ header button:hover{
     cursor: pointer;
     transition: all 0.3s ease 0s;
 }
+
