--- a/index.css
+++ b/index.css
@@ -180,6 +180,18 @@ header button:hover{
     transition: all 0.3s ease 0s;
 }
 
+#myButton{
+
+        padding: 9px 25px;
+        background-color: var(--one);
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        transition: all 0.3s ease 0s;
+    
+    
+}
+
 #stopButton {
     padding: 9px 25px;
     background-color: var(--one);
